# ComfyUI-QuantOps

./: MXFP8_IMPLEMENTATION.md  README.md  __init__.py  bnb4bit_ops.py  comfy_quant_helpers.py  fp8_ops.py  int8_ops.py  nf4_ops.py  pyproject.toml  requirements.txt  shape_utils.py  tensorwise_int8_ops.py  unified_ops.py
kernels/: __init__.py  fp8_kernels.py  tensorwise_kernels.py
mxfp8-support-docs/: mxfp8_linux_install.md  mxfp8_windows_install.md
nodes/: __init__.py  loader_nodes.py  lora_nodes.py
ops/: __init__.py  tensorwise_int8_ops.py
quant_layouts/: __init__.py  fp4_layout.py  fp8_variants.py  int8_layout.py  mxfp8_layout.py  nf4_layout.py  tensorwise_int8_layout.py
utils/: __init__.py  eager_quantization.py  safetensors_loader.py
